fix(training pipeline)

--- a/notebooks/prove_saliencies_influence_on_performance_proteingym.ipynb
+++ b/notebooks/prove_saliencies_influence_on_performance_proteingym.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading saliencies: 100%|██████████| 166/166 [08:19<00:00,  3.01s/file]\n"
+      "Loading saliencies: 100%|██████████| 166/166 [08:15<00:00,  2.99s/file]\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1595,52 +1595,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(384,)\n",
-      "[   4   17   26   39   43   45   53   65   66   72   85   99  101  105\n",
-      "  113  120  123  125  126  127  129  133  139  153  165  171  187  197\n",
-      "  207  214  219  228  231  238  244  250  252  261  267  272  280  295\n",
-      "  305  313  321  325  327  330  345  351  366  372  379  382  393  399\n",
-      "  404  406  427  431  438  439  452  454  457  458  461  478  483  496\n",
-      "  503  508  509  512  513  514  519  524  525  528  537  538  559  563\n",
-      "  582  591  607  612  623  626  628  633  636  641  649  650  658  659\n",
-      "  686  687  692  694  696  715  716  724  726  743  747  750  752  754\n",
-      "  755  765  766  769  771  782  797  803  804  805  808  810  820  822\n",
-      "  823  827  829  843  854  865  867  871  877  884  894  899  903  907\n",
-      "  908  912  915  920  934  951  955  969  984  991  996 1000 1005 1014\n",
-      " 1019 1030 1040 1042 1046 1050 1065 1070 1076 1078 1090 1095 1099 1101\n",
-      " 1116 1118 1128 1147 1154 1156 1164 1167 1171 1175 1176 1186 1187 1188\n",
-      " 1195 1197 1200 1202 1206 1213 1225 1237 1243 1282 1287 1289 1304 1309\n",
-      " 1311 1312 1316 1321 1330 1343 1344 1357 1364 1373 1383 1395 1396 1399\n",
-      " 1403 1405 1407 1411 1429 1432 1448 1456 1457 1459 1465 1468 1469 1471\n",
-      " 1475 1481 1483 1486 1489 1500 1503 1508 1512 1516 1535 1539 1542 1563\n",
-      " 1578 1587 1594 1603 1609 1611 1612 1616 1626 1638 1641 1647 1649 1650\n",
-      " 1654 1658 1659 1670 1684 1686 1694 1701 1703 1713 1715 1717 1718 1723\n",
-      " 1726 1727 1728 1738 1739 1745 1769 1790 1796 1798 1800 1806 1807 1809\n",
-      " 1821 1822 1825 1831 1837 1843 1861 1869 1874 1878 1879 1880 1886 1890\n",
-      " 1896 1906 1907 1919 1929 1933 1942 1949 1952 1957 1970 1987 1989 1998\n",
-      " 2003 2010 2022 2029 2042 2052 2062 2066 2071 2081 2095 2100 2107 2112\n",
-      " 2118 2122 2123 2130 2133 2139 2141 2144 2151 2152 2154 2165 2166 2169\n",
-      " 2176 2178 2184 2189 2198 2202 2217 2219 2222 2227 2244 2251 2260 2265\n",
-      " 2268 2269 2278 2282 2283 2295 2302 2305 2316 2323 2327 2330 2346 2356\n",
-      " 2390 2393 2400 2418 2423 2425 2438 2444 2445 2481 2482 2491 2502 2512\n",
-      " 2515 2519 2527 2539 2543 2549]\n"
+      "Number of dimensions in 80th percentile: 512\n",
+      "Saved important dimensions for 80th percentile to /mnt/f/nicole/retrain_vespag/important_dimensions/important_dimensions_q=80_n_dimensions=512\n",
+      "Number of dimensions in 85th percentile: 384\n",
+      "Saved important dimensions for 85th percentile to /mnt/f/nicole/retrain_vespag/important_dimensions/important_dimensions_q=85_n_dimensions=384\n",
+      "Number of dimensions in 90th percentile: 256\n",
+      "Saved important dimensions for 90th percentile to /mnt/f/nicole/retrain_vespag/important_dimensions/important_dimensions_q=90_n_dimensions=256\n",
+      "Number of dimensions in 95th percentile: 128\n",
+      "Saved important dimensions for 95th percentile to /mnt/f/nicole/retrain_vespag/important_dimensions/important_dimensions_q=95_n_dimensions=128\n",
+      "Number of dimensions in 99th percentile: 26\n",
+      "Saved important dimensions for 99th percentile to /mnt/f/nicole/retrain_vespag/important_dimensions/important_dimensions_q=99_n_dimensions=26\n"
      ]
     }
    ],
    "source": [
+    "base_path = Path('/mnt/f/nicole/retrain_vespag/important_dimensions/')\n",
+    "os.makedirs(base_path, exist_ok=True)\n",
+    "\n",
     "# select the Dimensions in the 95th percentile\n",
-    "q = 85\n",
-    "threshold = np.percentile(mean_saliency_per_dim, q)\n",
-    "dimensions = np.where(mean_saliency_per_dim >= threshold)[0]\n",
-    "print(dimensions.shape) \n",
-    "print(dimensions)"
+    "for q in [80, 85, 90, 95, 99]:\n",
+    "    threshold = np.percentile(mean_saliency_per_dim, q)\n",
+    "    dimensions = np.where(mean_saliency_per_dim >= threshold)[0]\n",
+    "    n_dimensions = dimensions.shape[0]\n",
+    "    print(f\"Number of dimensions in {q}th percentile: {n_dimensions}\")\n",
+    "    dimensions = np.array(dimensions)\n",
+    "    out_file = Path(base_path, f\"important_dimensions_{q=}_{n_dimensions=}\")\n",
+    "    np.save(out_file, dimensions)\n",
+    "    print(f\"Saved important dimensions for {q}th percentile to {out_file}\")"
    ]
   },
   {
